2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task Navigator requires full binary path in .desktop file
	Exec field". Fixes NB#39036
	* hildon-navigator/hn-others-button.c:use g_find_program_in_path
	  to resolve program path

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Do not hardcode hildon home window
	  size. Fixes: NB#43264

2006-10-13  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Removed g_debug
	  leaking memory.
	* hildon-status-bar/hildon-status-bar-main.c: Fixed potential
	  double free. Fixes: NB#39673

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: do not abort if we could not create
	.osso/hildon-home
	Fixes: NB#43067

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-button.c: fixed display of the "9" emblem
	Fixes: NB#43201

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-menu-item.[ch]: cache the close button
	  pixbufs in class variables. Fixes: NB#43043

2006-10-12  Moises Martinez <moises.martinzes@nokia.com>

	* install_sbapplet.sh: Improved script.

2006-10-12  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/close-application-dialog.c: Use _RESPONSE_CANCEL
	  instead of _REJECT so we close on pressing ESC.
	Fixes: NB#43121

2006-10-12  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/close-application-dialog.c:
	  - Revert to using default icon if not found
    Fixes: NB#43049

2006-10-12  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.[ch]:
	  - Added "system-inactivity"
	  - on "system-inactivity", only tell the applets to background
	  - on "background", don't do anything if system-inacitivty
	Fixes: NB#42985

2006-10-12  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-others-button.c: Revert to default icon also
	  for thumb icons